fixes queries
