# registry/app/api/openapi/api.yaml
@@ -630,6 +630,7 @@ paths:
         - $ref: "#/components/parameters/sortOrder"
         - $ref: "#/components/parameters/sortField"
         - $ref: "#/components/parameters/searchTerm"
+        - $ref: "#/components/parameters/softDeleteFilterParam"
       responses:
         200:
           $ref: "#/components/responses/ListArtifactVersionResponse"
@@ -3568,3 +3569,15 @@ components:
       description: Date. Format - MM/DD/YYYY
       schema:
         type: string
+    softDeleteFilterParam:
+      name: soft_delete_filter
+      in: query
+      required: false
+      description: Filter for soft-deleted entities
+      schema:
+        type: string
+        enum:
+          - exclude_deleted
+          - only_deleted
+          - all
+        default: exclude_deleted
